feat: redis에 response값 저장, 출력 기능